--- a/CT/CT.Lab3.ModulaTests/CT.Lab3.Modula.Tests.csproj
+++ b/CT/CT.Lab3.ModulaTests/CT.Lab3.Modula.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CT.Lab3\CT.Lab3.csproj" />
+    <ProjectReference Include="..\CT.Lab3\CT.Lab3.Modula.csproj" />
   </ItemGroup>
 
   <ItemGroup>
