--- a/CT/CT.Lab3/CT.Lab3.Modula.csproj
+++ b/CT/CT.Lab3/CT.Lab3.Modula.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CT.Lab3.CommonCode\CT.Lab3.CommonCode.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="Code.txt">
