Cleaned up solution

--- a/CT/CT.Lab3.ModulaTests/CT.Lab3.Modula.Tests.csproj
+++ b/CT/CT.Lab3.ModulaTests/CT.Lab3.Modula.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CT.Lab3.Modula\CT.Lab3.Modula.csproj" />
     <ProjectReference Include="..\CT.Lab3\CT.Lab3.Modula.csproj" />
   </ItemGroup>
 
