--- a/CT/CT.Lab3.Modula/CT.Lab3.Modula.csproj
+++ b/CT/CT.Lab3.Modula/CT.Lab3.Modula.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CT.Lab3.CommonCode\CT.Lab3.CommonCode.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Code.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
